# storage/api-docs/api-docs.json
@@ -6,90 +6,13 @@
     },
     "paths": {
         "/api/": {},
-        "/api/register": {
-            "post": {
-                "tags": [
-                    "Auth"
-                ],
-                "summary": "Регистрация пользователя",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "allOf": [
-                                    {
-                                        "properties": {
-                                            "name": {
-                                                "type": "string",
-                                                "example": "Ivan_Ivanov"
-                                            },
-                                            "email": {
-                                                "type": "string",
-                                                "example": "ivanov@mail.ru"
-                                            },
-                                            "password": {
-                                                "type": "string",
-                                                "example": "12345678"
-                                            }
-                                        },
-                                        "type": "object"
-                                    }
-                                ]
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "User created successfully."
-                                        },
-                                        "user": {
-                                            "properties": {
-                                                "name": {
-                                                    "type": "string",
-                                                    "example": "Ivan Ivanov"
-                                                },
-                                                "email": {
-                                                    "type": "string",
-                                                    "example": "ivanov@mail.ru"
-                                                },
-                                                "updated_at": {
-                                                    "type": "timestamp",
-                                                    "example": "2023-11-28T18:56:11.000000Z"
-                                                },
-                                                "created_at": {
-                                                    "type": "timestamp",
-                                                    "example": "2023-11-28T18:56:11.000000Z"
-                                                },
-                                                "id": {
-                                                    "type": "integer",
-                                                    "example": 1
-                                                }
-                                            },
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/api/login": {
             "post": {
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Авторизация пользователя(получение токена)",
+                "operationId": "a3b306d14572d1f4bd6c064b3233e7b8",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -166,12 +89,92 @@
                 }
             }
         },
+        "/api/register": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Регистрация пользователя",
+                "operationId": "8a56853624e025573120a09a4c75d468",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "allOf": [
+                                    {
+                                        "properties": {
+                                            "name": {
+                                                "type": "string",
+                                                "example": "Ivan_Ivanov"
+                                            },
+                                            "email": {
+                                                "type": "string",
+                                                "example": "ivanov@mail.ru"
+                                            },
+                                            "password": {
+                                                "type": "string",
+                                                "example": "12345678"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                ]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "User created successfully."
+                                        },
+                                        "user": {
+                                            "properties": {
+                                                "name": {
+                                                    "type": "string",
+                                                    "example": "Ivan Ivanov"
+                                                },
+                                                "email": {
+                                                    "type": "string",
+                                                    "example": "ivanov@mail.ru"
+                                                },
+                                                "updated_at": {
+                                                    "type": "timestamp",
+                                                    "example": "2023-11-28T18:56:11.000000Z"
+                                                },
+                                                "created_at": {
+                                                    "type": "timestamp",
+                                                    "example": "2023-11-28T18:56:11.000000Z"
+                                                },
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/logout": {
             "post": {
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Выйти из системы",
+                "operationId": "fe8f3429cd6979b3b4517e186505f9f9",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -203,6 +206,7 @@
                     "Note"
                 ],
                 "summary": "Получение заметок",
+                "operationId": "3aa8659d31289597f3ef0245baf47b2d",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -245,6 +249,7 @@
                     "Note"
                 ],
                 "summary": "Создание заметки",
+                "operationId": "7e23f5a8817b1ec6fae2689eff1f4227",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -332,6 +337,7 @@
                     "Note"
                 ],
                 "summary": "Редактирование заметки",
+                "operationId": "c7e6224fadd6d82b81ded7615279a15c",
                 "parameters": [
                     {
                         "name": "id",
@@ -426,6 +432,7 @@
                     "Note"
                 ],
                 "summary": "Удаление заметки",
+                "operationId": "231822d83675b5b9446d8b0f6f4d3959",
                 "parameters": [
                     {
                         "name": "id",
